variables.Variables.scala.error
Erreur de compilation :
Variables:11: error: not found: value While
While (dejaFait != nbPas){
^